--- a/css/customer/customer01.css
+++ b/css/customer/customer01.css
@@ -22,6 +22,7 @@
     background-color: aliceblue;
     border-top: 3px solid #777777;
     padding: 10px;
+    margin-top: 40px;
 }
 
 .input-text{
