--- a/css/member/join.css
+++ b/css/member/join.css
@@ -1,4 +1,41 @@
 /* join 1 */
+#join {
+    text-align: center;
+}
+#join :nth-child(1) {
+    margin: 10px; padding: 10px auto;
+    font-size: 25px;
+}
+#join :nth-child(2) {
+    margin: 10px; padding: 10px auto;
+    font-size: small;
+    color: gray;
+}
+#join2 {
+    border: 1px solid gray;
+    margin: 30px; padding: 10px;
+    padding-top: 20px; padding-bottom: 10px;
+    color: gray;
+    font-size: small;
+}
+#join3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid gray;
+    margin: 30px;
+    width: auto; height: 200px;
+    background-color: rgb(233, 230, 230);
+    text-align: center;
+}
+.name {
+    margin: 10px;
+}
+button {
+    width: 50px; height: 50px;
+    border: 1px solid gray;
+}
 
 /* join 2 */
 
