--- a/css/company/company03.css
+++ b/css/company/company03.css
@@ -42,3 +42,17 @@
 .companyMapContent td {
   padding-left: 10px;
 }
+
+.title{
+  font-size: 24px;
+  text-align: center;
+  margin-top: 50px;
+  height: 22px;
+}
+
+#eng{
+  font-size: 12px;
+  text-align: center;
+  font-weight: lighter;
+  color: #999999;
+}
