--- a/css/main.css
+++ b/css/main.css
@@ -156,16 +156,15 @@
 .section4-1 {
   border: 1px solid gray;
   margin-right: 10px;
-  padding: 10px;
-  width: 50%; float: left;
 }
 /* 섹션5 */
 #section5 {
   text-align: center;
   border: 1px solid gray;
   margin-top: 20px;
-  position: relative;
-  width: 1920px; height: 344px;
+  width: 1000px;
+  height: 300px;
+  margin: 0 auto;
 }
 #section5 img {
   object-fit: fill;
@@ -216,8 +215,17 @@
   margin-right: 10px;
 }
 /* footer */
-
-
+.footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 50px;
+  background-color: rgb(226, 226, 226);
+}
+.fivestone {
+  background-color: rgb(226, 226, 226);
+  text-align: center;
+}
 /* 테블릿 */
 @media screen and (min-width: 768px) and (max-width: 959px) {
 }
