--- a/css/company/company01.css
+++ b/css/company/company01.css
@@ -19,11 +19,12 @@
 }
 
 .sts2{
-    font-size: 14px;
+    font-size: 12px;
     color: #999999;
+    margin-top: 10px;
 }
 .sts3{
-    font-size: 12px;
+    font-size: 14px;
     color: #999999;
     text-align: center;
 }
@@ -37,11 +38,13 @@
 }
 
 .card {
-    margin: 10px;
-    background-color:honeydew;
+    margin: 10px 10px;
+    background-color:#f3f3f3e3;
 }
 .card-img-top{
-    width: 60px;
+    width: 70px;
+    margin: 0 auto;
+    margin-top: 40px;
 }
 .card-title{
     text-align: center;
@@ -49,6 +52,11 @@
 }
 .card-text{
     text-align: center;
-    font-size: 12px;
+    font-size: 11px;
     color: #999999;
+}
+
+.hist2{
+    color: #999999;
+    font-size: 12px;
 }
