--- a/css/main.css
+++ b/css/main.css
@@ -115,9 +115,11 @@
 #section2 {
   text-align: center;
   margin: 50px;
+  height: 500px;
+  padding-top: 150px;
 }
 #section2 :nth-child(1) {
-  font-size: 25px;
+  font-size: 24px;
 }
 #section2 :nth-child(2) {
   font-size: small;
