--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
 }
+
 /* 플로팅버튼 */
 .toTopScroll {
   position: fixed;
@@ -187,9 +188,16 @@
   height: 300px;
   margin: 0 auto;
 }
-#section5 img {
-  object-fit: fill;
+
+#section5 img{
+  width: 100%;
+  height: 300px;
 }
+
+
+/* #section5 img {
+  object-fit: fill;
+} */
 
 #section5-1 :nth-child(1) {
   font-size: 20px;
@@ -203,7 +211,7 @@
 /* 섹션6 */
 #section6 {
   text-align: center;
-  margin-top: 20px;
+  margin-top: 100px;
 }
 #section6 :nth-child(1) {
   font-size: 20px;
@@ -214,26 +222,58 @@
 }
 #cscenter {
   display: flex;
+  width: 1000px;
+  margin: 0 auto;
+  margin-bottom: 100px;
 }
-
+#cscenter-1 p{
+  color:#555555;
+  font-size: 14px;
+  margin-top: 15px;
+}
 #cscenter-2 {
-  border-top: 1px solid gray;
+  border-top: 1px dotted #999999;
+  margin-bottom: 20px;
+}
+#cscenter-2 a{
+  font-size: 12px;
+  color: #999999;
+  
 }
 #cs {
-  border: 1px solid gray;
-  margin-right: 10px;
+  border: 1px solid #999999;
+  margin-right: 30px;
+  width: 55%;
+  height: 180px;
+  padding:0 10px ;
 }
 #cs-3 {
-  border: 1px solid gray;
+  background-color: rgb(0, 0, 83);
   margin-right: 10px;
+  width: 15%;
+  height: 180px;
+  padding: 10px;
+  text-align: center;
+}
+#cs-3 a, #cs-4 a, #cs-5 a{
+  color: white;   
+  text-decoration: none;
 }
 #cs-4 {
-  border: 1px solid gray;
+  background-color: rgb(0, 195, 255);
   margin-right: 10px;
+  width: 15%;
+  height: 180px;
+  padding: 10px;
+  text-align: center;
 }
 #cs-5 {
-  border: 1px solid gray;
+  background-color: #555555;
   margin-right: 10px;
+  width: 15%;
+  height: 180px;
+  padding: 10px;
+  text-align: center;
 }
 /* footer */
 .footer {
