--- a/css/main.css
+++ b/css/main.css
@@ -187,26 +187,50 @@
   width: 1000px;
   height: 300px;
   margin: 0 auto;
+  position: relative;  
 }
-
-#section5 img{
+#section5-1 img {
   width: 100%;
   height: 300px;
-}
-
-
-/* #section5 img {
   object-fit: fill;
-} */
 
-#section5-1 :nth-child(1) {
-  font-size: 20px;
+} 
+
+#section5-1 h1{
+  font-size: 24px;
+  position: absolute;
+  top: 40%;
+  left: 40%;
+  color: white;
 }
-#section5-1 :nth-child(2) {
+#section5-1 p{
   font-size: small;
   color: gray;
-
+  position: absolute;
+  top: 55%;
+  left: 25%;
+  font-size: 14px;
+  color: white;
 }
+
+#learn{
+  border: 1px solid white;
+  color: white;
+  background-color:transparent;
+  font-size: 12px;
+  width: 100px;
+  height: 25px;
+  position: absolute;
+  top: 65%;
+  left: 45%;
+}
+
+#learn:hover{
+  background-color: rgb(0, 0, 83);
+  border: none;
+}
+
+
 
 /* 섹션6 */
 #section6 {
@@ -300,17 +324,7 @@
 }
 
 
-/* .footer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  padding: 50px;
-  background-color: rgb(226, 226, 226);
-}
-.fivestone {
-  background-color: rgb(226, 226, 226);
-  text-align: center;
-} */
+
 /* 테블릿 */
 @media screen and (min-width: 768px) and (max-width: 959px) {
 }
