--- a/css/main.css
+++ b/css/main.css
@@ -126,6 +126,14 @@
   font-size: small;
   color: gray;
 }
+#lmore{
+  border-radius: 0;
+  font-size: 12px;
+}
+#lmore:hover{
+  background-color: rgb(0, 0, 83);
+  border: none;
+} 
 /* 섹션3 */
 #section3 {
   text-align: center;
@@ -219,8 +227,7 @@
   color: white;
   background-color:transparent;
   font-size: 12px;
-  width: 100px;
-  height: 25px;
+  border-radius: 0;
   position: absolute;
   top: 65%;
   left: 45%;
@@ -229,7 +236,7 @@
 #learn:hover{
   background-color: rgb(0, 0, 83);
   border: none;
-}
+} 
 
 
 
@@ -307,16 +314,17 @@
   text-align: center;
 }
 #ft1{
+  width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content:space-evenly;
-  
+  justify-content:center;  
 }
 #ft1 a{
   color: white;
   font-size: 12px;
   text-decoration: none;
   margin-top: 30px;
+  margin-right: 30px;
 }
 .fivestone{
   color: #999999;
