--- a/business/business01.css
+++ b/business/business01.css
@@ -5,15 +5,20 @@
     text-align: center;
 }
 #business2 :nth-child(1) {
-    font-size: 25px;
+    font-size: 24px;
+    text-align: center;
+    margin-top: 50px;
+    height: 22px;
 }
 #business2 :nth-child(2) {
-    font-size: small;
-    color: gray;
+    font-size: 13px;
+    font-weight: lighter;
+    color: #999999;
 }
 #business3 :nth-child(1) {
     text-align: center;
-    font-size: 20px;
+    margin-top: 50px;
+    font-size: 24px;
 }
 #business3 :nth-child(2) {
     font-size: small;
