--- a/css/company/company01.css
+++ b/css/company/company01.css
@@ -6,7 +6,7 @@
 }
 
 #eng{
-    font-size: 12px;
+    font-size: 13px;
     text-align: center;
     font-weight: lighter;
     color: #999999;
@@ -19,7 +19,7 @@
 }
 
 .sts2{
-    font-size: 12px;
+    font-size: 14px;
     color: #999999;
     margin-top: 10px;
 }
@@ -36,10 +36,7 @@
     background-color: #f3f3f3e3;
     padding: 30px;
 }
-#con3{
-    float: left;
 
-}
 
 .card {
     margin: 10px 10px;
@@ -58,6 +55,10 @@
     text-align: center;
     font-size: 11px;
     color: #999999;
+}
+
+.hist{
+    padding-top: 20px;
 }
 
 .hist2{
