--- a/css/customer/customer02.css
+++ b/css/customer/customer02.css
@@ -40,6 +40,8 @@
 }
 
 /* search bar */
+
+
 .search > div {
   text-align: right;
 }
@@ -79,6 +81,7 @@
 }
 #listtb{
   margin-top: 40px;
+  font-size: 14px;
 }
 .table{
   border-top: 2px solid #444444;
@@ -92,6 +95,28 @@
 }
 
 #srcbar{
-  margin-top: 20px;
+  margin: 80px 0px;
+}
+.srh{
+  height: 30px;
+  border-radius: 0;
+  border:1px solid #999999;
+  font-size: 12px;
 }
 
+#write{
+  float: right;
+  margin: 10px;
+  margin-right: 20px;
+}
+#src{
+  height: 30px;
+  border-radius: 0;
+  border:1px solid #999999;
+}
+.cussrh{
+  width: 30px;
+  height: 30px;
+  border:1px solid #999999;
+  background-color: white;
+}
