--- a/css/main.css
+++ b/css/main.css
@@ -137,18 +137,58 @@
 /* 섹션3 */
 #section3 {
   text-align: center;
-  background-color: #f3f3f3;
-  padding-bottom: 50px;
+  margin: 50px 0;
+  height: 700px;
+  padding-top: 80px;
+  background-color: #eeeeee;
+  position: relative;
 }
 #section3 :nth-child(1) {
   font-size: 24px;
-  padding-top: 50px;
 }
-#section3 :nth-child(2) {
+#section3 p{
   font-size: small;
   color: gray;
-  margin-bottom: 30px;
 }
+#section3-1 img {
+  width: 300px;
+  object-fit: fill;
+  transition: .5s ease;
+  backface-visibility: hidden;
+} 
+
+#section3-1 h1{
+  font-size: 24px;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  color: white;
+  transform: translate(-50%, -40%);
+  transition: .5s ease;
+}
+
+#view{
+  border: 1px solid white;
+  color: white;
+  background-color:transparent;
+  font-size: 12px;
+  border-radius: 0;
+  position: absolute;
+  top: 47%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+#section3-1:hover .overlay {
+  opacity: 1;
+}
+#section3-1 img:hover{
+  opacity: 0.3;
+  cursor: pointer;
+  transition: .5s ease;
+} 
+
+
+
 /* 섹션4 */
 
 #section4flex {
@@ -160,6 +200,7 @@
 #section4 {
   text-align: center;
   margin-top: 50px;
+
 }
 #section4 :nth-child(1) {
   font-size: 20px;
@@ -172,12 +213,21 @@
   border: 1px solid #dddddd;
   width: 240px;
   margin-bottom: 50px;
+  
 }
 .section4-2 img{
   width: 240px;
 }
 .section4-2 p{
   margin: 10px;
+}
+.section4-2:hover {
+  cursor: pointer;
+}
+.section4-2 img:hover {
+  opacity: 0.5;
+  cursor: pointer;
+  transition: .5s ease;
 }
 .busitxt{
   font-size: 12px;
