--- a/css/main.css
+++ b/css/main.css
@@ -120,14 +120,14 @@
 #section2 {
   text-align: center;
   margin: 50px;
-  height: 500px;
+  height: 400px;
   padding-top: 150px;
 }
 #section2 :nth-child(1) {
-  font-size: 24px;
+  font-size: 30px;
 }
 #section2 :nth-child(2) {
-  font-size: small;
+  font-size: 16px;
   color: gray;
 }
 #lmore{
@@ -340,19 +340,15 @@
   margin-right: 10px;
   width: 15%;
   height: 180px;
-  padding: 10px;
+  padding: 20px 15px;
   text-align: center;
-}
-#cs-3 a, #cs-4 a, #cs-5 a{
-  color: white;   
-  text-decoration: none;
 }
 #cs-4 {
   background-color: rgb(0, 195, 255);
   margin-right: 10px;
   width: 15%;
   height: 180px;
-  padding: 10px;
+  padding:20px  15px;
   text-align: center;
 }
 #cs-5 {
@@ -360,9 +356,23 @@
   margin-right: 10px;
   width: 15%;
   height: 180px;
-  padding: 10px;
+  padding: 20px 15px;
   text-align: center;
 }
+#cs-3, #cs-4, #cs-5 p{
+  font-size: 11px;
+}
+#cs-3 a, #cs-4 a, #cs-5 a{
+  color: white;   
+  text-decoration: none;
+}
+#cs-3, #cs-4, #cs-5:hover{
+  cursor: pointer;
+  opacity: 1.2;
+}
+
+
+
 /* footer */
 .footer{
   height: 200px;
