--- a/css/main.css
+++ b/css/main.css
@@ -138,6 +138,8 @@
   background-color: rgb(0, 0, 83);
   border: none;
 } 
+
+
 /* 섹션3 */
 #section3 {
   text-align: center;
@@ -147,10 +149,11 @@
   background-color: #eeeeee;
   position: relative;
 }
-#section3 :nth-child(1) {
+.proSection1 h1 {
   font-size: 24px;
+  margin-top: 30px;
 }
-#section3 p{
+.proSection1 p{
   font-size: small;
   color: gray;
 }
@@ -191,6 +194,103 @@
   transition: .5s ease;
 } 
 
+
+
+
+.proMain {
+  width: 100%;
+  background-color: rgb(231, 231, 231);
+  padding-bottom: 50px;
+}
+.proSection1 {
+  padding-top: 20px;
+  text-align: center;
+}
+.proSection1 span {
+  color: #777777;
+}
+.proSection2 {
+  display: flex;
+  flex-flow: row wrap;
+}
+.proSection3 {
+  display: flex;
+  flex-flow: row wrap;
+  width: 48%;
+  height: 500px;
+  padding-left: 3px;
+}
+.contents1 {
+  height: 500px;
+  width: 48%;
+  padding: 3px;
+}
+.contents1 img,
+.contents2 img,
+.contents3 img,
+.contents4 img,
+.contents5 img {
+  width: 100%;
+  height: 100%;
+}
+.con1 {
+  position: relative;
+  width: 50%;
+}
+.contents2 {
+  height: 250px;
+  flex: 1 40%;
+  padding: 3px;
+}
+.contents3 {
+  height: 250px;
+  flex: 1 40%;
+  padding: 3px;
+}
+.contents4 {
+  height: 250px;
+  flex: 1 40%;
+  padding: 3px;
+}
+.contents5 {
+  height: 250px;
+  flex: 1 40%;
+  padding: 3px;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: 1s ease;
+}
+.con1:hover .overlay {
+  opacity: 0.8;
+  background-color: black;
+}
+.con2 {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+.con2 button {
+  width: 100px;
+  height: 30px;
+  font-size: 12px;
+  border: 1px solid white;
+  background-color: rgba(0, 0, 0, 0);
+  color: white;
+}
 
 
 /* 섹션4 */
@@ -366,9 +466,23 @@
   color: white;   
   text-decoration: none;
 }
-#cs-3, #cs-4, #cs-5:hover{
+#cs-3:hover{
   cursor: pointer;
   opacity: 1.2;
+  transition: .5s ease;
+  background-color: rgb(23, 23, 148);
+}
+#cs-4:hover{
+  cursor: pointer;
+  opacity: 1.2;
+  transition: .5s ease;
+  background-color: rgb(0, 159, 207);
+}
+#cs-5:hover{
+  cursor: pointer;
+  opacity: 1.2;
+  transition: .5s ease;
+  background-color: #333333;
 }
 
 
