--- a/css/member/join.css
+++ b/css/member/join.css
@@ -18,7 +18,7 @@
 }
 #join2 {
     border: 1px solid gray;
-    margin: 0px;
+    margin: 30px 30px;
     padding: 30px;
     color: gray;
     font-size: 20px;
