--- a/member/join.css
+++ b/member/join.css
@@ -17,6 +17,8 @@
     padding-top: 20px; padding-bottom: 10px;
     color: gray;
     font-size: small;
+    margin: 0 auto;
+    width: 95%;
 }
 #join3 {
     display: flex;
