--- a/css/main.css
+++ b/css/main.css
@@ -137,18 +137,12 @@
 #lmore:hover{
   background-color: rgb(0, 0, 83);
   border: none;
+  transition: .5s ease;
 } 
 
 
 /* 섹션3 */
-#section3 {
-  text-align: center;
-  margin: 50px 0;
-  height: 700px;
-  padding-top: 80px;
-  background-color: #eeeeee;
-  position: relative;
-}
+
 .proSection1 h1 {
   font-size: 24px;
   margin-top: 30px;
@@ -164,15 +158,6 @@
   backface-visibility: hidden;
 } 
 
-#section3-1 h1{
-  font-size: 24px;
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  color: white;
-  transform: translate(-50%, -40%);
-  transition: .5s ease;
-}
 
 #view{
   border: 1px solid white;
@@ -198,16 +183,23 @@
 
 
 .proMain {
-  width: 100%;
+  width: 100%; height: auto;
   background-color: rgb(231, 231, 231);
   padding-bottom: 50px;
 }
 .proSection1 {
   padding-top: 20px;
   text-align: center;
+  margin: 20px 0;
 }
+.proSection1 h3{
+  font-size: 20px;
+}
+
 .proSection1 span {
-  color: #777777;
+  font-size: small;
+  color: gray;
+
 }
 .proSection2 {
   display: flex;
@@ -298,7 +290,7 @@
 #section4flex {
   display: flex;
   flex-direction: row;
-  width:1000px;
+  width:100%;
   margin: 0 auto;
 }
 #section4 {
@@ -315,12 +307,12 @@
 }
 .section4-1 {
   border: 1px solid #dddddd;
-  width: 250px;
+  width: 25%;
   margin-bottom: 50px;
   
 }
 .section4-2 img{
-  width: 240px;
+  width: 100%;
   object-fit: contain;
 }
 .section4-2 p{
@@ -364,17 +356,19 @@
 #section5-1 h1{
   font-size: 24px;
   position: absolute;
-  top: 40%;
-  left: 40%;
+  width: 100%;
+  height: 100%;
+  top: 35%;
+  text-align: center;
   color: white;
 }
 #section5-1 p{
-  font-size: small;
-  color: gray;
   position: absolute;
-  top: 55%;
-  left: 25%;
   font-size: 14px;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  text-align: center;
   color: white;
 }
 
@@ -392,6 +386,7 @@
 #learn:hover{
   background-color: rgb(0, 0, 83);
   border: none;
+  transition: .5s ease;
 } 
 
 
@@ -410,7 +405,8 @@
 }
 #cscenter {
   display: flex;
-  width: 1000px;
+  justify-content: center;
+  width: 95%;
   margin: 0 auto;
   margin-bottom: 50px;
 }
@@ -432,14 +428,14 @@
   border: 1px solid #999999;
   margin-right: 30px;
   width: 55%;
-  height: 180px;
+  height: auto;
   padding:0 10px ;
 }
 #cs-3 {
   background-color: rgb(0, 0, 83);
   margin-right: 10px;
   width: 15%;
-  height: 180px;
+  height:  auto;
   padding: 20px 15px;
   text-align: center;
 }
@@ -447,15 +443,15 @@
   background-color: rgb(0, 195, 255);
   margin-right: 10px;
   width: 15%;
-  height: 180px;
-  padding:20px  15px;
+  height: auto;
+  padding:20px 15px;
   text-align: center;
 }
 #cs-5 {
   background-color: #555555;
   margin-right: 10px;
   width: 15%;
-  height: 180px;
+  height:  auto;
   padding: 20px 15px;
   text-align: center;
 }
@@ -481,7 +477,7 @@
 #cs-5:hover{
   cursor: pointer;
   opacity: 1.2;
-  transition: .5s ease;
+  transition: 1s ease;
   background-color: #333333;
 }
 
