--- a/css/company/company01.css
+++ b/css/company/company01.css
@@ -22,6 +22,8 @@
     font-size: 14px;
     color: #999999;
     margin-top: 10px;
+    max-width: 1000px;
+    margin: 0 auto;
 }
 .sts3{
     font-size: 14px;
@@ -31,6 +33,7 @@
 
 #con{
     width: 100%;
+    max-width: 1000px;
     height: auto;
     margin: 0 auto;
     background-color: #f3f3f3e3;
