--- a/css/company/company03.css
+++ b/css/company/company03.css
@@ -60,26 +60,27 @@
 
 .map-responsive{
 overflow:hidden;
-padding-bottom:56.25%;
 position:relative;
-height:0;
-width: 95%;
+width: 90%;
+max-width: 1000px;
 margin: 0 auto;
 margin-top: 40px;
+padding: 250px;
 }
 .map-responsive iframe{
 left:0;
 top:0;
-height:100%;
 width:100%;
 position:absolute;
+height: 500px;
 }
 /* Source: ostraining */
 
 
 #listtb{
   font-size: 14px;
-  width: 95%;
+  width: 90%;
+  max-width: 1000px;
   margin: 0 auto;
   margin-bottom: 50px;
 }
