--- a/css/main.css
+++ b/css/main.css
@@ -291,6 +291,7 @@
   display: flex;
   flex-direction: row;
   width:100%;
+  max-width: 1000px;
   margin: 0 auto;
 }
 #section4 {
@@ -309,11 +310,13 @@
   border: 1px solid #dddddd;
   width: 25%;
   margin-bottom: 50px;
-  
+  overflow: hidden;
 }
+
 .section4-2 img{
   width: 100%;
   object-fit: contain;
+  background-color: black;
 }
 .section4-2 p{
   margin: 10px;
@@ -322,10 +325,16 @@
   cursor: pointer;
 }
 .section4-2 img:hover {
-  transform: scale(1.2, 1.2);
-  opacity: 0.5;
+  display: block;
+  transform: scale(1.2);
+  opacity: 0.7;
   cursor: pointer;
   transition: .5s ease;
+}
+.section4-3{
+  overflow: hidden;
+  height: auto;
+  background-color: black;
 }
 .busitxt{
   font-size: 12px;
@@ -406,7 +415,8 @@
 #cscenter {
   display: flex;
   justify-content: center;
-  width: 95%;
+  width: 100%;
+  max-width: 1000px;
   margin: 0 auto;
   margin-bottom: 50px;
 }
