--- a/css/member/login.css
+++ b/css/member/login.css
@@ -17,7 +17,8 @@
 }
 
 .form {
-    width: 95%;
+    width: 100%;
+    max-width: 1000px;
     margin: 0 auto;
      padding: 50px;
     border: 1px solid #dddddd;
