--- a/css/main.css
+++ b/css/main.css
@@ -113,7 +113,6 @@
 /* 캐러셀 */
 #carouselExampleControls{
   width:100%;
-
   margin: 0 auto;
 }
 /* 섹션2 */
@@ -389,7 +388,7 @@
   border-radius: 0;
   position: absolute;
   top: 65%;
-  left: 45%;
+  left: 47%;
 }
 
 #learn:hover{
@@ -428,39 +427,38 @@
 #cscenter-2 {
   border-top: 1px dotted #999999;
   margin-bottom: 20px;
+  flex: 1 40%;
 }
 #cscenter-2 a{
   font-size: 12px;
   color: #999999;
   
 }
+#cscenter-3{
+  display: flex;
+  flex: 1 40%;
+}
 #cs {
   border: 1px solid #999999;
-  margin-right: 30px;
+  margin-right: 20px;
   width: 55%;
   height: auto;
   padding:0 10px ;
 }
 #cs-3 {
   background-color: rgb(0, 0, 83);
-  margin-right: 10px;
-  width: 15%;
   height:  auto;
   padding: 20px 15px;
   text-align: center;
 }
 #cs-4 {
   background-color: rgb(0, 195, 255);
-  margin-right: 10px;
-  width: 15%;
   height: auto;
   padding:20px 15px;
   text-align: center;
 }
 #cs-5 {
   background-color: #555555;
-  margin-right: 10px;
-  width: 15%;
   height:  auto;
   padding: 20px 15px;
   text-align: center;
