--- a/css/member/passwordFind.css
+++ b/css/member/passwordFind.css
@@ -24,6 +24,13 @@
     height: 20px;
 }
 
+#pwfind4{
+    width: 95%;
+    margin: 0 auto;
+    text-align: center;
+    padding-bottom: 5px;
+}
+
 #pwfind5{
     width: 95%;
     margin: 9px;
@@ -33,4 +40,8 @@
 }
 #pwfind5 img{
     margin-left: 10px;
+}
+
+#pwfind5 img:hover{
+    cursor: pointer;
 }
