--- a/css/customer/customer01.css
+++ b/css/customer/customer01.css
@@ -1,7 +1,3 @@
-#custom{
-    width: 800px;
-    margin: 0 auto;
-}
 
 .title{
     font-size: 24px;
@@ -24,11 +20,16 @@
     line-height: 30px;
     vertical-align: middle;
     font-size: 14px;
-    width: 200px;
-    
+    min-width: 100px;   
+}
+.sent{
+    min-width: 50px;   
 }
 .table{
     border-top: 3px solid #555555;
+    width: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
 }
 .table tr:last-child{
     border-bottom: 1px solid #dddddd;
@@ -44,7 +45,7 @@
 }
 
 .textform{
-    width: 300px;
+    width: 40%;
     border-radius: 0;
     border: 1px solid #cccccc;
 }
